# psp303

./: CMakeLists.txt  README.md  main.c  midi_output.c  midi_output.h
.github/workflows/: build.yml
libpspsync/: CMakeLists.txt  IMPLEMENTATION.md  README.md
libpspsync/include/: pspsync.h
libpspsync/src/: pspsync.c
libpspsync/tests/: test_pspsync.c
psp-usb-midi/: CMakeLists.txt  README.md  SAFETY.md  research.md
psp-usb-midi/driver/: module.c  usb_core.c  usb_core.h  usb_descriptors.c  usb_midi_descriptors.h  usb_midi_ipc.c  usb_midi_ipc.h  usb_midi_packets.c  usb_midi_packets.h  usb_midi_psp_transport.c  usb_midi_psp_transport.h  usb_midi_tx.c  usb_midi_tx.h
psp-usb-midi/examples/basic/: main.c
psp-usb-midi/shared/: usb_midi_ipc_protocol.h
